fixed overflow --major

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,6 @@ body{
 .hero-section{
     height: 100vh;
     width: 100vw;
+    position: fixed;
+    overflow: auto;
 }
